<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/character_list_background"
    android:padding="32dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/characteristics_header"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:id="@+id/character_list_stamina_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/stamina" />

                <TextView
                    android:id="@+id/character_list_stamina_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/stamina_header"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/character_list_stamina_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/black"
                    tools:text="9" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:id="@+id/character_list_courage_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/courage" />

                <TextView
                    android:id="@+id/character_list_courage_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/courage_header"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/character_list_courage_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/black"
                    tools:text="8" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:id="@+id/character_list_sympathy_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/sympathy" />

                <TextView
                    android:id="@+id/character_list_sympathy_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/sympathy_header"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/character_list_sympathy_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/black"
                    tools:text="7" />
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/inventory_header"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/character_list_items_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        </android.support.v7.widget.RecyclerView>

        <Button
            android:id="@+id/character_list_back_to_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/button_background"
            android:padding="16dp"
            android:text="@string/main_back_to_menu_header"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>