<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paper_background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/main_characteristic_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/main_stamina_linear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp"
            android:theme="@style/AppTheme.ColorHighlight">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/stamina_header"
                android:src="@drawable/stamina" />

            <TextView
                android:id="@+id/main_stamina_value"
                fontPath="fonts/bangkok-cyr.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:ellipsize="marquee"
                android:singleLine="false"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                tools:ignore="MissingPrefix"
                tools:text="10" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/main_courage_linear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp"
            android:theme="@style/AppTheme.ColorHighlight">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/courage_header"
                android:src="@drawable/courage" />

            <TextView
                android:id="@+id/main_courage_value"
                fontPath="fonts/bangkok-cyr.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                tools:ignore="MissingPrefix"
                tools:text="10" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/main_sympathy_linear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp"
            android:theme="@style/AppTheme.ColorHighlight">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/sympathy_header"
                android:src="@drawable/sympathy" />

            <TextView
                android:id="@+id/main_sympathy_value"
                fontPath="fonts/bangkok-cyr.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:singleLine="false"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                tools:ignore="MissingPrefix"
                tools:text="10" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/main_character_list_linear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp"
            android:theme="@style/AppTheme.ColorHighlight">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/courage_header"
                android:src="@drawable/character_list" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/elephants" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/blot" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/main_scroll_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_characteristic_container">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <ru.mgusev.questbook.support.ResizableImageView
                android:id="@+id/main_episode_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/episode_image_description"
                tools:src="@drawable/episode103" />

            <com.bluejamesbond.text.DocumentView xmlns:ext="http://schemas.android.com/apk/res-auto"
                android:id="@+id/main_episode_text"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="16dp"
                ext:documentView_lineHeightMultiplier="1.5"
                ext:documentView_textAlignment="justified"
                ext:documentView_textColor="@android:color/black"
                ext:documentView_textTypefacePath="fonts/bangkok-cyr.ttf"
                ext:documentView_textFormat="plain"
                ext:documentView_textSize="16sp" >

            </com.bluejamesbond.text.DocumentView>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/monogram" />

            <LinearLayout
                android:id="@+id/main_option_buttons_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="-10dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

            </LinearLayout>

            <TextView
                android:id="@+id/main_game_over"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_game_over_header"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/main_back_to_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:padding="24dp"
                android:text="@string/main_back_to_menu_header"
                android:textSize="16sp" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>